# router

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE-MIT  README.md  build.rs  justfile  tags.md
.cargo/: config.toml
crates/algorithm/: Cargo.toml
crates/algorithm/src/: a_star.rs  bidir_a_star.rs  bidir_dijkstra.rs  convex_hull.rs  dikstra.rs  lib.rs
crates/import-pbf/: Cargo.toml
crates/import-pbf/src/: config.rs  country_lookup.rs  lib.rs  tags.rs  tags_convert.rs
crates/polyline/: Cargo.toml
crates/polyline/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/service/: Cargo.toml
crates/service/src/: common.rs  error.rs  graph.rs  info.rs  inspect.rs  isochrone.rs  lib.rs  locate.rs  matrix.rs  meta.rs  profile.rs  route.rs  snap.rs  speed_config.rs  virtual_graph.rs
crates/storage/: Cargo.toml
crates/storage/src/: extsort.rs  idindex.rs  lib.rs  morton.rs  pagefile.rs  spatial.rs  tablefile.rs
crates/storage/src/btree/: mod.rs  write.rs
crates/storage/src/data/: attrib.rs  dim_restriction.rs  edge.rs  edge_node.rs  geometry.rs  mod.rs  node.rs  pod64.rs  turn_edge.rs  way.rs  way_extended.rs
crates/types/: Cargo.toml
crates/types/src/: bbox.rs  coordinate.rs  country.rs  fixed.rs  lib.rs  vehicle.rs
docs/: redesign.md  storage.md  tags.md
frontend/: .typesafe-i18n.json  biome.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/scripts/: generate-api.ts
frontend/src/: flag-icons.ts  main.ts  style.css
frontend/src/api/: client.ts  polyline.ts  types.ts
frontend/src/controls/: isochrone.ts  route.ts  snap.ts
frontend/src/i18n/: i18n-types.ts  i18n-util.async.ts  i18n-util.sync.ts  i18n-util.ts  index.ts
frontend/src/i18n/de/: index.ts
frontend/src/i18n/en/: index.ts
src/: config.rs  main.rs
src/args/: import.rs  mod.rs  route.rs  serve.rs
src/cmds/: import.rs  mod.rs  route.rs  serve.rs
