[package]
name = "router-import-pbf"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
rayon = "1.11"
memmap2 = "0.9"
tracing.workspace = true
bitflags.workspace = true
crossbeam-channel.workspace = true
thiserror.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
toml = "0.8"
geo = "0.28"
rstar = "0.12"
geojson = { version = "0.24", features = ["geo-types"] }

router-types.workspace = true
router-storage.workspace = true

[dependencies.osm-pbf-reader]
git = "https://github.com/HellButcher/osm-pbf.git"
branch = "feat/new-protobuf-v4"
#path = "../../../osm-pbf/reader"
