[package]
name = "router-storage"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
bitflags.workspace = true
bytemuck.workspace = true
crossbeam-queue.workspace = true
crossbeam-channel.workspace = true
memmap2 = "0.9"
rayon = "1.12"
tracing.workspace = true

router-types = { workspace = true, features = ["bytemuck"] }

[dev-dependencies]
tempfile = "3"
